--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/superprojekt?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=coderslab
+
+spring.queries.users-query=select phoneNumber, password, active from user where phone_number=?
+spring.queries.roles-query=select u.phone_number, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.phone_number=?
