--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ spring.datasource.password=dbpass
 
 # Konfiguracja Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
