--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,12 +1,12 @@
 # Konfiguracja bazy danych H2
-spring.datasource.url=jdbc:h2:mem:testDB
+spring.datasource.url=jdbc:mysql://localhost:3306/superprojekt?serverTimezone=UTC
 #spring.datasource.url=jdbc:h2:file:~/testDB
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=dbuser
-spring.datasource.password=dbpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=coderslab
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Konfiguracja Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
@@ -20,6 +20,7 @@ server.error.include-stacktrace=always
 # Konfiguracja loggera
 logging.level.root=info
 logging.level.honestit.projects.homeland=debug
+logging.level.web=debug
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
