--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -22,7 +22,9 @@ logging.level.root=info
 logging.level.honestit.projects.homeland=debug
 logging.level.web=debug
 logging.level.org.hibernate.SQL=debug
+logging.level.org.springframework.web=DEBUG
+spring.mvc.log-request-details=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
-spring.queries.users-query=select phone_number, password, active from users where phone_number=?
-spring.queries.roles-query=select u.phone_number, r.role from users u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.phone_number=?
+spring.queries.users-query=select login, password, active from users where login=?
+spring.queries.roles-query=select login, role from users where login =?
